Layout for mobile; fix button alignment inside a

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+@media only screen and (width < 500px) {
+  .btn-row-01 {
+    display: grid;
+  }
+} /* modCheck bootstrap? modCheck */
+@media only screen and (width >= 500px) {
+  .btn-row-01 {
+    display: flex;
+  }
+}
+
+
 :root {
   --primary-color: #fbf1c7e1;
   --secondary-color: #3c3836e1;
@@ -33,8 +45,6 @@ body {
   color: var(--primary-color);
   margin: auto;
   max-width: 500px;
-  align-items: left;
-  justify-content: left;
 }
 
 h1 {
@@ -43,11 +53,11 @@ h1 {
   margin-top: 2em;
 }
 
-a {
+a { 
   color: var(--primary-color);
   text-decoration: none;
   margin: 12px;
-  width: 100%;
+  width: 100%; /* it just works */
   height: 80px;
   cursor: pointer;
 }
@@ -69,12 +79,12 @@ a {
 .btn-row-01 {
   width: auto;
   height: auto;
-  display: flex;
 }
 
 button {
-  margin: 12px;
+  margin: 0px;
   width: 100%;
+  min-width: 60%;
   height: 80px;
   cursor: pointer;
   font-size: 20px;
